# CHIP-8_emulator

./: .gitignore  CMakeLists.txt  README.md  build_src.sh
include/: chip8_core.h  chip8_decoder.h  chip8_emulator.h  chip8_executer.h  chip8_executor.h  chip8_interface.h  chip8_memory.h  chip8_structures.h
roms/: timer.c8
src/: chip8_core.c  chip8_decoder.c  chip8_emulator.c  chip8_executer.c  chip8_executor.c  chip8_interface.c  chip8_memory.c  main.c
tests/: tests_chip8_decoder.c  tests_chip8_emulator.c  tests_chip8_executer.c  tests_chip8_main.c
